--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>student-site</title>
 </head>
 <body>
-    Hi, I am Navjeet!
+    my life is a joke. the despair of existing overburdens me.
 </body>
 </html>
