--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     my life is a joke. the despair of existing overburdens me.
+    If we become friends, the doors of dissonance will haunt u forever.
+    Also I study in University of Delhi and i have a beautiful cat.
+    
 </body>
 </html>
