--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     Also I study in University of Delhi and i have a beautiful cat.
 
     The skills i have acquired up until now are HTML, CSS, JAVASCRIPT, NODEJS, REACT.
+    Created some CLI apps which will be showcased here.
 
 
 
