Updated fav books/movies

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     The skills i have acquired up until now are HTML, CSS, JAVASCRIPT, NODEJS, REACT.
     Created some CLI apps which will be showcased here.
 
+    Favourite books:
+    1. Crime and Punishment(Book)
+    2. Notes from the Underground
+    
+    Favourite Movies:
+    1. Interstellar
+    2. The Da Vinci Code 
+    3. There will be Blood
+
 
 
 </body>
