refactor: added images

--- a/blogs.html
+++ b/blogs.html
@@ -42,6 +42,9 @@
 
 
     <header class="header">
+        <div class="display-image">
+            <img src="blogging.png" alt="">
+        </div>
         <h2>See my blogs</h2>
         
     </header>
