--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,9 @@
 
 
     <header class="header">
+        <div class="display-image">
+            <img src="project-making.jpg" alt="">
+        </div>
         <h2>See my projects</h2>
         
     </header>
