refator: fixed orientation

--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
 
     <header class="header">
         <div class="display-image">
-            <img src="project-making.jpg" alt="">
+            <img src="project-making.jpg" width="400px" alt="">
         </div>
         <h2>See my projects</h2>
         
