--- a/blogs.html
+++ b/blogs.html
@@ -43,7 +43,7 @@
 
     <header class="header">
         <div class="display-image">
-            <img src="blogging.png" alt="">
+            <img src="blogging.png" width="400px" alt="">
         </div>
         <h2>See my blogs</h2>
         
