refactor: embedded dynamics

--- a/blogs.html
+++ b/blogs.html
@@ -25,15 +25,15 @@
             <div class="brand">Portfolio</div>
             <ul class="nav-pills">
                 <li class="list-inline">
-                    <a href="index.html" class="link">Home</a>
+                    <a href="index.html" class="link link-underline">Home</a>
 
                 </li>
                 <li class="list-inline">
-                    <a href="projects.html" class="link">Projects</a>
+                    <a href="projects.html" class="link link-underline">Projects</a>
 
                 </li>
                 <li class="list-inline">
-                    <a href="/" class="link">Blogs</a>
+                    <a href="/" class="link link-underline">Blogs</a>
                 </li>
             </ul>
         </div>
@@ -43,7 +43,7 @@
 
     <header class="header">
         <div class="display-image">
-            <img src="blogging.png" width="400px" alt="">
+            <img src="blogging.png" width="4d link-underline00px" alt="">
         </div>
         <h2>See my blogs</h2>
         
@@ -79,16 +79,16 @@
     <footer class="footer container-fluid">
         
         <div class="container-links">
-            <h3>contact</h3>
+            <h3>contact me</h3>
             <ul>
                 <li class="list-inline">
-                    <a href="https://twitter.com/nav01910" target="_blank" class="link">Twitter</a>
+                    <a href="https://twitter.com/nav01910" target="_blank" class="link social-link">Twitter</a>
                 </li>
                 <li class="list-inline">
-                    <a href="https://www.linkedin.com/in/navjeet-singh-476294208/" target="_blank" class="link">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/navjeet-singh-476294208/" target="_blank" class="link social-link">LinkedIn</a>
                 </li>
                 <li class="list-inline">
-                    <a href="https://github.com/nav01910" target="_blank" class="link">GitHub</a>
+                    <a href="https://github.com/nav01910" target="_blank" class="link social-link">GitHub</a>
                 </li>
             </ul>
         </div>
