--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             <div class="brand">Portfolio</div>
             <ul class="nav-pills">
                 <li class="list-inline">
-                    <a href="/" class="link">Home</a>
+                    <a href="/" class="link link-underline">Home</a>
 
                 </li>
                 <li class="list-inline">
-                    <a href="projects.html" class="link">Projects</a>
+                    <a href="projects.html" class="link link-underline">Projects</a>
 
                 </li>
                 <li class="list-inline">
-                    <a href="blogs.html" class="link">Blogs</a>
+                    <a href="blogs.html" class="link link-underline">Blogs</a>
                 </li>
             </ul>
         </div>
@@ -80,16 +80,16 @@
     <footer class="footer container-fluid">
         
         <div class="container-links">
-            <h3>contact</h3>
+            <h3>contact me</h3>
             <ul>
                 <li class="list-inline">
-                    <a href="https://twitter.com/nav01910" target="_blank" class="link">Twitter</a>
+                    <a href="https://twitter.com/nav01910" target="_blank" class="link social-link">Twitter</a>
                 </li>
                 <li class="list-inline">
-                    <a href="https://www.linkedin.com/in/navjeet-singh-476294208/" target="_blank" class="link">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/navjeet-singh-476294208/" target="_blank" class="link social-link">LinkedIn</a>
                 </li>
                 <li class="list-inline">
-                    <a href="https://github.com/nav01910" target="_blank" class="link">GitHub</a>
+                    <a href="https://github.com/nav01910" target="_blank" class="link social-link">GitHub</a>
                 </li>
             </ul>
         </div>
