update: fixed minor errors

--- a/blogs.html
+++ b/blogs.html
@@ -33,7 +33,7 @@
 
                 </li>
                 <li class="list-inline">
-                    <a href="/" class="link link-underline">Blogs</a>
+                    <a href="blogs.html" class="link link-underline">Blogs</a>
                 </li>
             </ul>
         </div>
@@ -43,7 +43,7 @@
 
     <header class="header">
         <div class="display-image">
-            <img src="blogging.png" width="4d link-underline00px" alt="">
+            <img src="blogging.png" width="300px" alt="">
         </div>
         <h2>See my blogs</h2>
         
