--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="brand">Portfolio</div>
             <ul class="nav-pills">
                 <li class="list-inline">
-                    <a href="/" class="link link-underline">Home</a>
+                    <a href="index.html" class="link link-underline">Home</a>
 
                 </li>
                 <li class="list-inline">
