--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
 
                 </li>
                 <li class="list-inline">
-                    <a href="/" class="link link-underline">Projects</a>
+                    <a href="projects.html" class="link link-underline">Projects</a>
 
                 </li>
                 <li class="list-inline">
