--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
 
     <section class="section">
         <h1>Gen-Z Emoji Interpreter</h1>
-        <p>A tool that spares you all the headache caused by emojis that
+        <p>An interpreter that spares you all the headache in understanding the peculiar meaning of emojis that
             has plagued gen-z vernacular.
         </p>
         <a
@@ -83,7 +83,7 @@
 
     <section class="section section-odd">
         <h1>Shakespeare Translator</h1>
-        <p>Never disappoint your crush again with this unfair tool.</p>
+        <p>Never disappoint your crush again when Shakespeare becomes your homie.</p>
         <a
             class="link btn-link"
             href="https://world-salad.netlify.app"
@@ -96,8 +96,7 @@
 
     <section class="section">
         <h1>Talking Banana</h1>
-        <p>Talk to Bananas to know their intelligence and wallow in self-pity
-            because you can never be as good as them.
+        <p>Learn the language of bananas, earn their trust and then breed with their women.
         </p>
         <a
             class="link btn-link"
