--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,9 @@
 
     <section class="section section-odd">
         <h1>Shakespeare Translator</h1>
-        <p>Never disappoint your crush again when Shakespeare becomes your homie.</p>
+        <p>Flaunt your Queen Elizabeth Englsih infront of your normie college friends
+            and impress your crush because Shakespeare is here to serve you with an
+            exquisite word-salad.</p>
         <a
             class="link btn-link"
             href="https://world-salad.netlify.app"
