--- a/projects.html
+++ b/projects.html
@@ -53,6 +53,21 @@
     </header>
 
     <section class="section ">
+        <h1>Drum Kit</h1>
+        <p>A simple unplayable drum kit.
+        </p>
+        <br/>
+        <a
+            class="link btn-link"
+            href="https://simpledrum-kit.netlify.app/"
+            >Live Project</a>
+          <a
+            class="link btn-link"
+            href="https://github.com/nav01910/drum-kit"
+            >View Source</a>
+    </section>
+
+    <section class="section ">
         <h1>Cash Register Manager</h1>
         <p>Calculates no. of notes of currencies Rs.
             1, 5, 10, 20, 100, 500, 2000.
