--- a/projects.html
+++ b/projects.html
@@ -53,6 +53,21 @@
     </header>
 
     <section class="section ">
+        <h1>Are you Heaven sent?</h1>
+        <p>Check if you're born under a lucky star.
+        </p>
+        <br/>
+        <a
+            class="link btn-link"
+            href="https://heaven-sent.netlify.app/"
+            >Live Project</a>
+          <a
+            class="link btn-link"
+            href="https://github.com/nav01910/markEleven"
+            >View Source</a>
+    </section>
+
+    <section class="section ">
         <h1>Drum Kit</h1>
         <p>A simple unplayable drum kit.
         </p>
