--- a/blogs.html
+++ b/blogs.html
@@ -50,28 +50,14 @@
     </header>
 
     <section class="section section-odd">
-        <h1>dummy-blog 1</h1>
-        <small>January 2023</small>
-        <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        <h1>Why does the console return ‘undefined’ on executing the console.log() method?</h1>
+        <small>12 February 2023</small>
+        <p>If you’ve been using replit or Chrome console, or the REPL environment of any IDE for that matter, you might have had an unsettling impression of the undefined value returned after executing the console.log() method.
 
         </p>
         <a
             class="link btn-link"
-            href="dummy-blog.html" target="_blank"
-            >Read More</a>
-    </section>
-
-    <section class="section">
-        <h1>dummy blog 2</h1>
-        <small>January 2023</small>
-        <p>
-            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance.
-
-        </p>
-        <a
-            class="link btn-link"
-            href="dummy-blog.html" target="_blank"
+            href="https://medium.com/@nav01910/why-does-the-console-return-undefined-on-executing-the-console-log-method-27765bac2f90" target="_blank"
             >Read More</a>
     </section>
 
