--- a/blogs.html
+++ b/blogs.html
@@ -61,6 +61,18 @@
             >Read More</a>
     </section>
 
+    <section class="section section-odd">
+        <h1>Nullish Coalescing (??) and Optional Chaining (?.)</h1>
+        <small>23 February 2023</small>
+        <p>The competence and efficiency of any programming language in the industry are more or less marked by the ability of the language to reduce complications to essentials and do fast operations.
+
+        </p>
+        <a
+            class="link btn-link"
+            href="https://nav-0.hashnode.dev/nullish-coalescing-and-optional-chaining" target="_blank"
+            >Read More</a>
+    </section>
+
 
     <footer class="footer container-fluid">
         
